--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,15 @@
 
   <build>
     <finalName>MyBusCompany</finalName>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>8</source>
+                  <target>8</target>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
